--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vite App</title>
 </head>
+
 <body>
-  <div id="app"></div>
-  <div id="components-demo"><button-counter></button-counter></div>
+    <div id="app"></div>
+    <!--<div id="components-demo"><button-counter></button-counter></div>-->
     <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
-    <!--<p>图片复选框</p>  
+<!--<p>图片复选框</p>  
     <script src="https://unpkg.com/vue@next"></script>
     <input type="checkbox" v-html="ccc" id="one" class="" value="1" v-model="checkedNames">
     <label for="one">选项一<img src="src/assets/123.png" alt="12312" width="200" height="200"  @click="counter1 += 1" /></label>
